force-app/main/default/objects/CodeForce_Config__c/CodeForce_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores AI provider configuration for CodeForce AI. Supports Gemini and OpenAI.</description>
    <label>CodeForce Config</label>
</CustomObject>