force-app/main/default/objects/CodeForce_Config__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>API Key for the selected AI provider</description>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>