force-app/main/default/objects/CodeForce_Config__c/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <description>Base URL of the AI API (e.g. https://generativelanguage.googleapis.com, https://api.openai.com, https://api.deepseek.com, https://api.groq.com/openai)</description>
    <label>Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>