force-app/main/default/objects/CodeForce_Config__c/fields/Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Name__c</fullName>
    <defaultValue>&quot;gemini-2.5-flash&quot;</defaultValue>
    <description>AI model name (e.g. gemini-2.5-flash, gpt-4o)</description>
    <label>Model Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>