force-app/main/default/objects/CodeForce_Config__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <defaultValue>&quot;Gemini&quot;</defaultValue>
    <description>AI provider: Gemini or OpenAI</description>
    <label>Provider</label>
    <length>50</length>
    <type>Text</type>
</CustomField>